force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/ABCL_Cx_360_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata holds fields to be displayed in different cx 360 tiles based on business unit</description>
    <label>ABCL Cx 360 Field Mapping</label>
    <pluralLabel>ABCL Cx 360 Field Mappings</pluralLabel>
</CustomObject>