force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/fields/Account_Info_Fields__c.field-meta.xml
<CustomField>
    <fullName>Account_Info_Fields__c</fullName>
    <description>Field map for account information section</description>
    <label>Account Info Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>