force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
                <default>true</default>
                <label>Payments</label>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>ABWM</fullName>
            </value>
            <value>
                <fullName>ABSLIG</fullName>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
            <value>
                <fullName>ABSLAMC</fullName>
            </value>
            <value>
                <fullName>ABHI</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>ABML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>