force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/fields/Customer_consent_fields__c.field-meta.xml
<CustomField>
    <fullName>Customer_consent_fields__c</fullName>
    <description>Fields to be displayed in the customer consent section</description>
    <label>Customer consent fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>