force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/fields/Customer_Happiness_Fields__c.field-meta.xml
<CustomField>
    <fullName>Customer_Happiness_Fields__c</fullName>
    <description>Fields to be displayed in the customer happiness section</description>
    <label>Customer Happiness Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>