force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/fields/HNI_Field__c.field-meta.xml
<CustomField>
    <fullName>HNI_Field__c</fullName>
    <description>BU specific field which will decide HNI customer flag</description>
    <inlineHelpText>Please enter &quot;API name:expected Value&quot; of the field on Account object which will help to decide HNI Customer for the resp Business Unit</inlineHelpText>
    <label>HNI Field</label>
    <type>TextArea</type>
</CustomField>