force-app/main/default/objects/ABCL_Cx_360_Field_Mapping__mdt/fields/HWC_Field__c.field-meta.xml
<CustomField>
    <fullName>HWC_Field__c</fullName>
    <description>BU specific field which will decide HWC customer flag</description>
    <inlineHelpText>Please enter &quot;API name:Expected Value&quot; of the field on Account object which will help to decide HWC Customer for the resp Business Unit</inlineHelpText>
    <label>HWC Field</label>
    <type>TextArea</type>
</CustomField>